pre-working on interval

--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,77 @@
-.App {
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+}
+html, body, #root{
+  height: 100%;
+  padding: 10px;
+  background-color: #eeeeee;
+}
+h1{
+  font-size: 1.2rem;
+}
+h3{
+  font-size: 1rem;
+  color: #383838;
+}
+.container{
+  margin: 0 auto;
+  width: 80%;
+  min-height: 100%; 
+  background-color: #e6e6e6; 
+  display: flex;
+}
+.main{
+  width: 80%;
+  margin: 0 auto;
+}
+.imageContainer{
+  margin-top: 20px;
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+/* Posts */
+.postContainer{
+  margin: 20px auto;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.postContainer h1{
+  color: #686868;
+  border-bottom: 2px solid #a6a6a6;
 }
-
-.App-link {
-  color: #61dafb;
+.postContainer h2{
+  color: #686868;
+  text-align: right;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.postWrapper{
+  margin-top: 20px;
+  padding: 20px;
+  height: 600px;
+  overflow-y: scroll;
+}
+.post{
+  width: 80%;
+  padding: 20px;
+  margin: 0 auto 30px auto;
+  border-radius: 10px;
+  background-color: white;
+}
+.post span{
+  font-size: 0.8rem;
+  color: #a6a6a6;
+}
+.post p{
+  font-size: 0.9rem;
+  color: #686868;
+}
+/* Footer */
+footer{
+  color: #686868;
+  text-align: center;
+}
+footer :first-child{
+  font-size: 0.8rem;
+}
+footer :last-child{
+  font-size: 0.7rem;
 }
